// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Dialog component Change dialog type Toggles classNames correctly 1`] = `
<DocumentFragment>
  <div
    class="ssb-dialog warning"
  >
    <div
      class="icon-panel"
    >
      <svg
        class="icon"
        fill="none"
        height="45"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="45"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
        />
        <line
          x1="12"
          x2="12"
          y1="9"
          y2="13"
        />
        <line
          x1="12"
          x2="12.01"
          y1="17"
          y2="17"
        />
      </svg>
    </div>
    <div
      class="dialog-content"
    >
      <span
        class="dialog-title"
      >
        Dialog Title
      </span>
      <div
        class="content"
      >
        Dialog
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dialog component Matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="ssb-dialog info"
  >
    <div
      class="icon-panel"
    >
      <svg
        class="icon"
        fill="none"
        height="45"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="45"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <line
          x1="12"
          x2="12"
          y1="16"
          y2="12"
        />
        <line
          x1="12"
          x2="12.01"
          y1="8"
          y2="8"
        />
      </svg>
    </div>
    <div
      class="dialog-content"
    >
      <span
        class="dialog-title"
      >
        Dialog Title
      </span>
      <div
        class="content"
      >
        Dialog
      </div>
    </div>
  </div>
</DocumentFragment>
`;
